@@ -13,18 +13,10 @@
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-compiler-plugin</artifactId>
         <configuration>
-          <source>19</source>
-          <target>19</target>
+          <source>21</source>
+          <target>21</target>
           <compilerArgs>
             <arg>--enable-preview </arg>
-            <arg>--add-modules=jdk.incubator.concurrent</arg>
-            <annotationProcessorPaths>
-              <path>
-                <groupId>org.projectlombok</groupId>
-                <artifactId>lombok</artifactId>
-                <version>1.18.24</version>
-              </path>
-            </annotationProcessorPaths>
           </compilerArgs>
         </configuration>
       </plugin>
